k8s/labs/troubleshooting/crash-cmd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crash-cmd
  labels:
    lab: "50"
    exercise: "crash-cmd"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crash-cmd
  template:
    metadata:
      labels:
        app: crash-cmd
    spec:
      containers:
        - name: app
          image: busybox:1.36
          command: ["/bin/sh", "-c", "exit 1"]
