k8s/labs/troubleshooting/lab52-ex5.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app8080
  namespace: lab52-ex5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app8080
  template:
    metadata:
      labels:
        app: app8080
    spec:
      containers:
        - name: nginx
          image: nginx:1.25-alpine
          args:
            - /bin/sh
            - -c
            - sed -i 's/listen\s\+80;/listen 8080;/' /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  namespace: lab52-ex5
spec:
  selector:
    app: app8080
  ports:
    - port: 80
      targetPort: 80
