k8s/labs/troubleshooting/lab52-ex6.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  namespace: lab52-ex6
spec:
  replicas: 2
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
        - name: echo
          image: hashicorp/http-echo:1.0.0
          args: ["-text=nodeport-ok"]
          ports:
            - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: echo-nodeport
  namespace: lab52-ex6
spec:
  type: NodePort
  selector:
    app: echo
  ports:
    - port: 80
      targetPort: 5678
