k8s/labs/troubleshooting/web-svc-wrong.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: lab52-ex1
spec:
  selector:
    app: webapp
  ports:
    - port: 80
      targetPort: 80
