k8s/labs/troubleshooting/default-deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: lab52-ex4
spec:
  podSelector: {}
  policyTypes:
    - Ingress
